# human-slave-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  mcp.rs  state.rs  telnet.rs  web.rs
